log
Fri, Mar 21, 2025  6:51:51 PM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
3f6cb15
Fri, Mar 21, 2025  6:57:34 PM: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
dabee97
Fri, Mar 21, 2025  7:03:58 PM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
357dbd4
Fri, Mar 21, 2025  7:21:19 PM: 
 exercises.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  3|2
total_score: 40/70
3b2136d
Fri, Mar 21, 2025  7:21:43 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:101:18: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int dato = top(P1);
                  ^~~
exercises.c:102:22: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(pila_aux, dato);
                      ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:106:18: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
       int dato = top(pila_aux);
                  ^~~
exercises.c:107:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P1, dato);
                ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:108:16: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
       push(P2, dato);
                ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'int'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8dff273
